--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
     <meta charset="utf-8">
     <title>Genesis Platform</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.js"></script>
 </head>
 
 <body>
     <script src="index.js"></script>
     <header>Genesis</header>
     <div class="content">
-        <label>All Modules: </label>
-        <table class="table table-striped table-hover" id="modulesTable">
+        <p class="font-weight-bold">All Modules:</p>
+        <div id="toolbar">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addNewModule">Add</button>
+            <button type="button" id="removeModule" onclick="deleteModule()" class="btn btn-primary"
+                disabled>Delete</button>
+        </div>
+        <table class="table table-striped table-hover" id="modulesTable" data-toolbar="#toolbar" data-toggle="table"
+            data-url="getAllModules" data-click-to-select="true" data-search="true">
             <thead>
                 <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Module Name</th>
+                    <th data-field="state" data-checkbox="true"></th>
+                    <th data-field="name">ID</th>
+                    <th data-field="title">Module Name</th>
                 </tr>
             </thead>
             <tbody>
             </tbody>
         </table>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addNewModule">Add New
-            Module</button>
-        <button type="button" onclick="deleteModule()" class="btn btn-primary">Delete</button>
+
 
         <!-- dialog part -->
         <div class="modal fade" id="addNewModule" data-backdrop="static" data-keyboard="false" tabindex="-1"
@@ -85,14 +92,14 @@
                                                 Fields</button>
                                         </div>
                                         <div class="card-body">
-                                            <form id="addFieldsForm" class="invisible needs-validation" novalidate>
+                                            <form id="addFieldsForm" hidden>
                                                 <div class="form-row shadow-sm p-3 mb-5 bg-white rounded">
                                                     <div class="col">
-                                                        <input type="text" class="form-control" name="Key"
+                                                        <input type="text" class="form-control" name="key"
                                                             placeholder="Key" required>
                                                     </div>
                                                     <div class="col">
-                                                        <input type="text" class="form-control" name="Name"
+                                                        <input type="text" class="form-control" name="name"
                                                             placeholder="Name" required>
                                                     </div>
                                                 </div>
@@ -100,28 +107,29 @@
                                             <table class="table table-striped table-hover" id="fieldsTable">
                                                 <thead>
                                                     <tr>
-                                                        <th scope="col">Key</th>
-                                                        <th scope="col">Name</th>
+                                                        <th data-field="key">Key</th>
+                                                        <th data-field="name"">Name</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody>
-                                                </tbody>
                                             </table>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                            <button type="button" onclick="addNewsModule()" class="btn btn-primary">Ok</button>
+                        <div class=" modal-footer">
+                                                            <button type="button" class="btn btn-secondary"
+                                                                data-dismiss="modal">Cancel</button>
+                                                            <button type="button" onclick="addNewsModule()"
+                                                                class="btn btn-primary">Ok</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end dialog -->
                         </div>
                     </div>
-                </div>
-            </div>
-            <!-- end dialog -->
-        </div>
-        <footer>genesis tools support.</footer>
+                    <footer>genesis tools support.</footer>
 </body>
 
 </html>
