--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <script src="index.js"></script>
-    <header>Genesis</header>
+    <header>Genesis Configuration</header>
     <div class="content">
         <p class="font-weight-bold">All Modules:</p>
         <div id="toolbar">
@@ -51,7 +51,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col">
-                                    <form id="newData" class="needs-validation" novalidate>
+                                    <form id="newData">
                                         <div class="form-group">
                                             <label for="moduleID">Module ID: </label>
                                             <input type="text" id="moduleID" name="moduleID" class="form-control"
